# python-slip39

./: .coveragerc  .gitignore  .gitmodules  App.org  App.txt  DKIM-setup  GNUmakefile  LICENSE  MANIFEST.in  Makefile  README.org  README.txt  SLIP-39-description.md  SLIP-39-macOS.spec  SLIP-39-win32.spec  SLIP-39.py  SLIP-39.spec  SLIP39.py  SLIP39.spec  default.nix  dkim-setup  flake.nix  fonts_list.py  macOS.org  macOS.txt  nixpkgs.nix  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-gui.txt  requirements-invoice.txt  requirements-json.txt  requirements-optional.txt  requirements-tests.txt  requirements-wallet.py  requirements-wallet.txt  requirements.txt  setup.py
.github/workflows/: main.yml  release.yml
SLIP-39.metadata/: entitlements.plist
SLIP39.metadata/: entitlements.plist
eth_account_SLIP39/: api_test.py  generate.py  pdf.py
images/: SLIP39.icns
slip39/: __init__.py  api.py  api_passphrase_test.py  api_test.py  communications.py  communications_test.py  defaults.py  dependency_test.py  exceptions.py  generate.py  generate_test.py  generator_test.py  layout.py  limits.py  limits_test.py  main.py  output_test.py  payments.py  payments_test.py  recovery_test.csv  recovery_test.py  types.py  util.py  util_test.py  version.py
slip39/App/: __main__.py  main.py
slip39/cli/: __init__.py  __main__.py
slip39/generator/: __init__.py  __main__.py  main.py
slip39/gui/: SLIP-39-ANONYMOUS.org  SLIP-39-ANONYMOUS.txt  SLIP-39-AS-BIP.org  SLIP-39-AS-BIP.txt  SLIP-39-CRYPTO.org  SLIP-39-CRYPTO.txt  SLIP-39-CS.org  SLIP-39-CS.txt  SLIP-39-EXTENDABLE.org  SLIP-39-EXTENDABLE.txt  SLIP-39-G-NAME.org  SLIP-39-G-NAME.txt  SLIP-39-G.org  SLIP-39-G.txt  SLIP-39-LO.org  SLIP-39-LO.txt  SLIP-39-PASSPHRASE.org  SLIP-39-PASSPHRASE.txt  SLIP-39-PF.org  SLIP-39-PF.txt  SLIP-39-SD.org  SLIP-39-SD.txt  SLIP-39-SE-SIGS.org  SLIP-39-SE-SIGS.txt  SLIP-39-SE.org  SLIP-39-SE.txt  SLIP-39-THRESHOLD.org  SLIP-39-THRESHOLD.txt  SLIP-39-WALLET.org  SLIP-39-WALLET.txt  SLIP-39.txt  main.py
slip39/invoice/: ERC20s.json  ERC20s.py  MultiSend-solc-v0-4-11.sol  MultiTransferEther-solc-v0-5-16.sol  Tokens-Ethereum.json  Tokens-Goerli.json  Tokens.py  __init__.py  artifact.py  artifact_test.py  bitquery_test.py  communications.py  communications_test.py  email.py  email_test.py  ethereum.py  ethereum_test.py  multipayout.py  multipayout_test.py  multisend.py  multisend_test-payouts.json  multisend_test-transactions.js  multisend_test.py  payments.py  payments_test.py
slip39/known/: generator.py  main.py
slip39/layout/: COVER-BIP-39.org  COVER-BIP-39.txt  COVER-SLIP-39.org  COVER-SLIP-39.txt  COVER.txt  __init__.py  components.py  pdf.py  printer.py
slip39/recovery/: __init__.py  __main__.py  entropy.py  main.py
slip39/tabulate/: __init__.py  version.py
(+6 files in other folders)
