[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name			= "slip39"
dynamic			= ["version"]
description		= "Standards-compliant SLIP-39 cryptocurrency seed generation and recovery, compatible with Trezor hardware wallets"
readme			= {file = "SLIP-39-description.md", content-type = "text/markdown"}
requires-python		= ">=3.9"
keywords		= ["Ethereum", "Bitcoin", "Dogecoin", "Litecoin", "cryptocurrency", "SLIP-39", "BIP-39", "seed", "recovery", "PDF", "BIP-38", "paper", "wallet"]
license			= "GPL-3.0-or-later OR LicenseRef-Proprietary"
license-files		= ["LICENSE", "COPYING"]
authors			= [
    { name = "Perry Kundert", email = "perry@dominionrnd.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Environment :: Console",
    "Topic :: Security :: Cryptography",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "base58			>=2.0.1,<3",
    "chacha20poly1305		>=0.0.3",
    "click			>=8.1.3,<9",
    "crypto-licensing		>=5.2.3,<6",
    "fpdf2			>=2.7.6,<3",
    "shamir-mnemonic-slip39	>=0.4.0,<0.5",
    "hdwallet-slip39		>=4.0.3,<5",
    "tabulate-slip39		>=0.10.6",
    "mnemonic			>=0.21,<1",
    "qrcode			>=7.3",
]

[project.optional-dependencies]
gui = [
    "FreeSimpleGUI		>=5.2,<6",
]

serial = [
    "pyserial			>=3.5",
]

wallet = [
    "eth-account		>=0.11.3,<0.12",
]

invoice = [
    "eth-account		>=0.11.3,<0.12",
    "py-solc-x			>=1.1.1,<1.2",
    "pycryptodome		>=3.16,<4",
    "requests			>=2.20,<3",
    "dkimpy[ed25519]		>=1.0.5,<2",
    "web3[tester]		==6.20.4",
    "eth-tester[py-evm]		>=0.11.0b1,<0.12.0b1",
    "py-geth			>=3.14.0,<4",
]

tests = [
    "aiosmtpd			>=1.4,<2",
    "numpy",
    "flake8",
    "pyinstaller		>=6.1",
    "pytest			>=7.4.2,<8",
    "pytest-cov			>=4.1.0,<5",
]

dev = [
    "build",
    "setuptools",
    "wheel",
]

[project.urls]
"Bug Tracker"		= "https://github.com/pjkundert/python-slip39/issues"
Homepage		= "https://github.com/pjkundert/python-slip39"

[project.scripts]
slip39			= "slip39.main:main"
slip39-recovery		= "slip39.recovery.main:main"
slip39-generator	= "slip39.generator.main:main"
slip39-gui		= "slip39.gui.main:main"
slip39-cli		= "slip39.cli:cli"

[tool.setuptools]
zip-safe		= true
include-package-data	= true

[tool.setuptools.packages.find]
where = ["."]
include = ["slip39*"]

[tool.setuptools.package-data]
slip39 = [
    "layout/*.png",
    "layout/*.txt",
    "layout/font/*.ttf",
    "gui/*.txt",
]

[tool.setuptools.dynamic]
version = {attr = "slip39.version.__version__"}
